--- a/DioKftSite/Views/ProductPage/Index.cshtml
+++ b/DioKftSite/Views/ProductPage/Index.cshtml
@@ -21,6 +21,7 @@
     <div class="row">
         <img class="headerImage" src="~/Content/Images/product-header.png" />
     </div>
+    <h1>Feltöltés alatt...</h1>
     @*<div class="row">
         @using (Html.BeginForm("Search", "Product", FormMethod.Post))
         {
