--- a/DioKftSite/Views/GalleryPage/Index.cshtml
+++ b/DioKftSite/Views/GalleryPage/Index.cshtml
@@ -5,27 +5,31 @@
 }
 
 <style type="text/css">
-    #productPage .headerImage {
+    #galleryPage .headerImage {
         width: 100%;
         height: 20%;
     }
 
-    #productPage .form-control {
+    #galleryPage .form-control {
         background-color: #125027;
         color: white;
         margin: 25px auto 25px auto;
         border-radius: 0;
     }
-    #productPage .img-responsive {
+    #galleryPage .img-responsive {
         width: 300px;
         height: 200px;
     }
+
+    #galleryPage .row {
+        padding-bottom: 25px;
+    }
 </style>
-<div id="productPage">
+<div id="galleryPage">
     <div class="row">
         <img class="headerImage" src="~/Content/Images/product-header.png" />
     </div>
-    <h1>Gallery</h1>
+    <h1>@Resources.Resources.Gallery</h1>
 
     @{var photos = Model.ToList(); }
 
