--- a/DioKftSite/Views/Home/Index.cshtml
+++ b/DioKftSite/Views/Home/Index.cshtml
@@ -87,10 +87,15 @@
         }
 
         #aboutPage .services .content {
-            width: 100%;
+            width: 50%;
             text-align: center;
             padding-bottom: 25px;
             padding-top: 10px;
+            color: #125027;
+            font-weight: bold;
+            font-size: 16pt;
+            text-transform: uppercase;
+            margin-left:25%;
         }
 
 </style>
@@ -126,7 +131,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img class="logo img-responsive" src="~/Content/Images/dio_logo.png" />
+                <img class="logo img-responsive" src="~/Content/Images/dio logo_barna_korbevagva.png" />
             </div>
         </div>
         <div class="row">
@@ -142,7 +147,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="button-container">
-                    <button>Ajánlat kéréshez kattintson ide</button>
+                    <button onclick="location.href='@Url.Action("Index", "ContactPage")'">Ajánlat kéréshez kattintson ide</button>
                 </div>
             </div>
         </div>
@@ -150,30 +155,30 @@
     <div class="services">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/vegyianyag.png" />
+                <div class="content">@Resources.Resources.Chemicals</div>
             </div>
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/mutragya.png" />
+                <div class="content">@Resources.Resources.Fertilizer</div>
             </div>
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/vetomagok.png" />
+                <div class="content">@Resources.Resources.Seeds</div>                   
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/novenyvedo_szerek.png" />
+                <div class="content">@Resources.Resources.Pesticides</div>
             </div>
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/integracio.png" />
+                <div class="content">@Resources.Resources.Integration</div>
             </div>
             <div class="col-md-4">
-                <img class="img-responsive img-circle" src="~/Content/Images/about.jpg" />
-                <div class="content">services</div>
+                <img class="img-responsive img-circle" src="~/Content/Images/Services/termeny_kereskedelem.png" />
+                <div class="content">@Resources.Resources.Trade</div>                
             </div>
         </div>
     </div>
