--- a/DioKftSite/Views/NewsPage/Index.cshtml
+++ b/DioKftSite/Views/NewsPage/Index.cshtml
@@ -1,54 +1,96 @@
 ﻿@model IEnumerable<DioKftSite.Models.News>
 
-<style>
-    a.thumbnail {
-        width: 20%;
-        height: 20%;
+<style type="text/css">
+    .panel {
+        border: 0;
     }
 
-    iframe.youtube-video {
-       
-        width: 30%;
-        height: 50%;
+    #newsListContainer {
+        background-color: #F7F7F7;
+        font-family: avenir-lt-w01_85-heavy1475544, sans-serif;
     }
+
+
+        #newsListContainer img {
+            position: relative;
+            left: auto;
+            right: auto;
+            width: 300px;
+            height: 150px;
+        }
+
+        #newsListContainer .serviceContent {
+            background-color: #e6e6e6;
+            height: 150px;
+            text-align: justify;
+            font-size: 15px;
+            margin-bottom: 15px;
+        }
+
+            #newsListContainer .serviceContent .title h4 {
+                color: #125027;
+                font-size: 22px;
+                text-align: left;
+                line-height: 1.1em;
+                margin-top: 0px;
+                padding: 5px 0 0 5px;
+            }
+
+            #newsListContainer .serviceContent .text {
+                padding: 5px 5px 5px 5px;
+                height: 70px;
+                text-overflow: ellipsis;
+                /*white-space: nowrap;*/
+                overflow: hidden;
+                color: #464646;
+            }
+
+            #newsListContainer .serviceContent button {
+                position: absolute;
+                bottom: 20px;
+                right: 20px;
+                min-height: 20px;
+                background-color: #125027;
+                color: white;
+                border-radius: 0;
+                line-height: 1.4em;
+                -webkit-transition: background 0.2s linear;
+                -moz-transition: background 0.2s linear;
+                -ms-transition: background 0.2s linear;
+                -o-transition: background 0.2s linear;
+                transition: background 0.2s linear;
+                overflow: hidden;
+                padding-top: 0px !important;
+                padding-bottom: 0px !important;
+            }
+
+            #newsListContainer button:hover {
+                background-color: Highlight;
+            }
+
+            #newsListContainer .date {
+                padding: 5px 0px 5px 5px;
+                color: #464646;
+            }
+
 </style>
 
-<div class="container">
-    @foreach (var item in Model)
-    {
-        <div class="row">
-            <div class="span12">
-                <div class="row">
-                    <div class="span8">
-                        <h4><strong><a href="#">@Html.DisplayFor(modelItem => item.Header)</a></strong></h4>
+<div class="container" id="newsListContainer">
+    <div class="panel panel-default">
+        <div class="panel-body">
+
+            @foreach (var item in Model)
+            {
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <img src="@Url.Content(item.ImageUrl)" class="img-responsive">
+                    <div class="serviceContent">
+                        <div class="title"><h4>@item.Header</h4></div>
+                        <div class="text">@item.Body</div>
+                        <button type="button" class="btn" onclick="location.href='@Url.Action("Details", "NewsPage", new { id = item.Id })'">@Resources.Resources.NewsDetails</button>
+                        <div class="date">@item.Created.ToString("yyyy.MM.dd.")</div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="span2">
-                        
-                            <a href="#" class="thumbnail">
-                                <img src="@Url.Content(item.ImageUrl)" class="img-responsive" />
-                            </a>
-                    </div>
-                    <div class="span10">
-                        <p>
-                            @Html.DisplayFor(modelItem => item.Body)
-                        </p>
-                        <p>@Html.ActionLink("Details", "Details", new { id = item.Id })</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="span8">
-                        <p></p>
-                        <p>
-                            
-                            Created <i class="icon-calendar"></i> @Html.DisplayFor(modelItem => item.Created)
-                            @*| <i class="icon-tags"></i> Category : <a href="#"><span class="label label-info">@Html.DisplayFor(modelItem => item.NewsCategory.Name)</span></a>*@
-                        </p>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
-    }        
+    </div>
 </div>
-<hr>
