--- a/DioKftSite/Views/Shared/_Layout.cshtml
+++ b/DioKftSite/Views/Shared/_Layout.cshtml
@@ -3,6 +3,9 @@
     var id = (string)Session[DioKftSite.Helpers.SessionItems.UserId.ToString()];
 
     var authenticated = !string.IsNullOrEmpty(name) && !string.IsNullOrEmpty(id);
+
+    System.Threading.Thread.CurrentThread.CurrentCulture = new System.Globalization.CultureInfo("hu");
+    System.Threading.Thread.CurrentThread.CurrentUICulture = System.Threading.Thread.CurrentThread.CurrentCulture;
 }
 
 <!DOCTYPE html>
@@ -28,7 +31,7 @@
 
     <style type="text/css">
         .navbar {
-            background: url(@Href("~/Content/Images/background.jpg"));
+            background: url(@Href("~/Content/Images/menuhattere.jpg"));
         }
 
         .navbar-nav{
@@ -76,6 +79,13 @@
             position:relative;
             top:49px;
         }
+
+        .btn-authentication{
+            background-color: #125027;
+            border-radius:0px;
+            color:white;
+            padding: 0px 12px 0px 12px !important;
+        }
     </style>
 
     <div class="navbar navbar-default navbar-fixed-top">
@@ -90,41 +100,43 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+            
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item">@Html.ActionLink("About", "Index", "Home")</li>
-                    @*<li class="nav-item"><a>Services</a></li>*@
-                    <li class="nav-item">@Html.ActionLink("Products", "Index", "ProductPage")</li>
-                    <li class="nav-item">@Html.ActionLink("News", "Index", "NewsPage")</li>
-                    <li class="nav-item">@Html.ActionLink("Gallery", "Index", "GalleryPage")</li>                    
-                    <li class="nav-item"> @Html.ActionLink("Contact", "Index", "ContactPage")</li>
+                    <li class="nav-item">@Html.ActionLink(Resources.Resources.About, "Index", "Home")</li>
+                    <li class="nav-item">@Html.ActionLink(Resources.Resources.Products, "Index", "ProductPage")</li>
+                    <li class="nav-item">@Html.ActionLink(Resources.Resources.News, "Index", "NewsPage")</li>
+                    <li class="nav-item">@Html.ActionLink(Resources.Resources.Gallery, "Index", "GalleryPage")</li>                    
+                    <li class="nav-item"> @Html.ActionLink(Resources.Resources.Contact, "Index", "ContactPage")</li>
                     @if (authenticated)
                     {
-                        <li class="nav-item"> @Html.ActionLink("Admin", "Admin", "Home")</li>
+                        <li class="nav-item"> @Html.ActionLink(Resources.Resources.Admin, "Admin", "Home")</li>
                     }
                 </ul>
 
-                <div class="navbar-right">
-                    <ul class="nav navbar-nav ">
-                        <li>
+                <div class="navbar-right">                                       
                             @if (!authenticated)
                             {
-                                <a href="@Url.Action("Index", "Login")" class="btn">
-                                    Login
+                                <a href="@Url.Action("Index", "Login")" class="btn btn-authentication">                                    
+                                    @Resources.Resources.Login
                                     <span class="glyphicon glyphicon-log-in"></span>
                                 </a>
                             }
                             else
                             {
-                                <a href="@Url.Action("Logout", "Login")" class="btn">
-                                    Logout
+                                <a href="@Url.Action("Logout", "Login")" class="btn btn-authentication">
+                                    @Resources.Resources.Logout
                                     <span class="glyphicon glyphicon-log-out"></span>
                                 </a>
                             }
-                        </li>
-                    </ul>
+                    <a href="https://www.facebook.com/dio896/" class="btn btn-social-icon btn-facebook btn-sm">
+                        <span class="fa fa-facebook"></span>
+                    </a>
+
+                    <a href="https://www.instagram.com/dio_896/" class="btn btn-social-icon btn-instagram btn-sm">
+                        <span class="fa fa-instagram"></span>
+                    </a> 
                 </div>
             </div>
 
