--- a/DioKftSite/Views/Shared/_Layout.cshtml
+++ b/DioKftSite/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="@Url.Content("~/content/favicon.ico")" />
     <title>DIO 896 KFT.</title>
     @Styles.Render("~/Content/site-css")
     @Styles.Render("~/Content/css")
