--- a/DioKftSite/Views/Home/_Slider.cshtml
+++ b/DioKftSite/Views/Home/_Slider.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿<style type="text/css">
+    img.slider-image {
+        width: 100% !important;
+        height: 700px !important;
+    }
+</style>
 <div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -12,21 +17,21 @@
         <div class="carousel-inner">
 
             <div class="item active">
-                <img src="~/Content/Images/about.jpg" alt="Los Angeles" style="width:100%;">
+                <img class="slider-image" src="~/Content/Images/about.jpg" alt="..." style="width:100%;">
                 <div class="carousel-caption">
                     <h3>Üdvözöljük Honlapunkon!</h3>                    
                 </div>
             </div>
 
             <div class="item">
-                <img src="~/Content/Images/about.jpg" alt="Chicago" style="width:100%;">
+                <img class="slider-image" src="~/Content/Images/maxresdefault.jpg" alt="..." style="width:100%;">
                 <div class="carousel-caption">
                     <h3>Üdvözöljük Honlapunkon!</h3>                    
                 </div>
             </div>
 
             <div class="item">
-                <img src="~/Content/Images/about.jpg" alt="New York" style="width:100%;">
+                <img class="slider-image" src="~/Content/Images/ukraine-photo-blog-14.jpg" alt="..." style="width:100%;">
                 <div class="carousel-caption">
                     <h3>Üdvözöljük Honlapunkon!</h3>                    
                 </div>
