Modify UI and DB

--- a/DioKftSite/Views/Shared/_Layout.cshtml
+++ b/DioKftSite/Views/Shared/_Layout.cshtml
@@ -107,6 +107,7 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item">@Html.ActionLink(Resources.Resources.About, "Index", "Home")</li>
                     <li class="nav-item">@Html.ActionLink(Resources.Resources.Products, "Index", "ProductPage")</li>
+                    <li class="nav-item">@Html.ActionLink(Resources.Resources.Services, "Index", "Services")</li>
                     <li class="nav-item">@Html.ActionLink(Resources.Resources.News, "Index", "NewsPage")</li>
                     <li class="nav-item">@Html.ActionLink(Resources.Resources.Gallery, "Index", "GalleryPage")</li>                    
                     <li class="nav-item"> @Html.ActionLink(Resources.Resources.Contact, "Index", "ContactPage")</li>
