--- a/DioKftSite/Views/ProductPage/Index.cshtml
+++ b/DioKftSite/Views/ProductPage/Index.cshtml
@@ -1,25 +1,8 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
+﻿@Styles.Render("~/Content/products-page")
 
-
-<style type="text/css">
-    #productPage .headerImage {
-        width: 100%;
-        height: 20%;
-    }
-
-    #productPage .form-control {
-        background-color: #125027;
-        color: white;
-        margin: 25px auto 25px auto;
-        border-radius: 0;
-    }
-</style>
 <div id="productPage">
     <div class="row">
-        <img class="headerImage" src="~/Content/Images/product-header.png" />
+        <img class="col-md-12" src="~/Content/Images/product-header.png" />
     </div>
     <h1>Feltöltés alatt...</h1>
     @*<div class="row">
