--- a/DioKftSite/Views/Products/Delete.cshtml
+++ b/DioKftSite/Views/Products/Delete.cshtml
@@ -20,19 +20,59 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Manufacturer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Manufacturer)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaceOfOrigin)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlaceOfOrigin)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Quality)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Quality)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Type)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Type)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Culture)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Culture)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AreaOfUsage)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AreaOfUsage)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Manufacturer.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Manufacturer.Name)
         </dd>
 
         <dt>
