--- a/DioKftSite/Views/Shared/_Layout.cshtml
+++ b/DioKftSite/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="@Url.Content("~/content/favicon.ico")" />
     <title>DIO 896 KFT.</title>
+    <script src="~/MVCGridHandler.axd/script.js"></script>
     @Styles.Render("~/Content/site-css")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -86,6 +87,11 @@
             border-radius:0px;
             color:white;
             padding: 0px 12px 0px 12px !important;
+        }
+        .navbar-right{
+            position: absolute;
+            top: 0px;
+            right: 25%;
         }
     </style>
 
