--- a/DioKftSite/Views/Products/Index.cshtml
+++ b/DioKftSite/Views/Products/Index.cshtml
@@ -15,10 +15,25 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Category.Name)
+            @Html.DisplayNameFor(model => model.Manufacturer)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Manufacturer.Name)
+            @Html.DisplayNameFor(model => model.PlaceOfOrigin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Quality)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Type)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Culture)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AreaOfUsage)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Unit.Name)
@@ -32,10 +47,25 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Category.Name)
+            @Html.DisplayFor(modelItem => item.Manufacturer)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Manufacturer.Name)
+            @Html.DisplayFor(modelItem => item.PlaceOfOrigin)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Quality)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Type)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Culture)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AreaOfUsage)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Category.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Unit.Name)
