--- a/DioKftSite/Content/CustomDesign/ProductsPage.css
+++ b/DioKftSite/Content/CustomDesign/ProductsPage.css
@@ -1,1 +1,20 @@
 ﻿
+.customButton {
+    background-color: #125027;
+    border-radius: 0px;
+    color: white;
+    padding: 0px 12px 0px 12px !important;
+}
+
+.form-group {
+    padding-bottom: 30px;
+}
+
+.panel {
+    margin-top: 20px;    
+}
+
+.panel-body {
+    max-height:450px;
+    overflow-y:scroll;
+}
