--- a/DioKftSite/Views/ContactPage/Index.cshtml
+++ b/DioKftSite/Views/ContactPage/Index.cshtml
@@ -108,7 +108,7 @@
         <img class="headerImage" src="~/Content/Images/contact-header.jpg" />
     </div>
 
-    @using (Html.BeginForm("SendEmail", "Contact", FormMethod.Post))
+    @using (Html.BeginForm("SendEmail", "ContactPage", FormMethod.Post))
     {
         <div class="row">
             <h3>Ajánlatkérés / Kapcsolat / Rendelés</h3>
@@ -118,7 +118,7 @@
                 @Html.TextBoxFor(m => m.Email.CompanyName, new { @type = "text", @class = "email-field", @id = "inputCompanyName", @placeholder = "Company Name" })
                 @Html.TextBoxFor(m => m.Email.EmailAddress, new { @type = "email", @class = "email-field", @id = "inputEmailAdress", @placeholder = "E-mail adress" })
                 @Html.TextBoxFor(m => m.Email.PhoneNumber, new { @type = "tel", @class = "email-field", @id = "inputPhoneNumber", @placeholder = "Phone number" })
-                <button type="submit" class="btn">Send</button>
+                <button type="submit" class="btn disabled">Send</button>
             </div>
 
             <div class="col-md-4">
