--- a/DioKftSite/Views/NewsPage/Index.cshtml
+++ b/DioKftSite/Views/NewsPage/Index.cshtml
@@ -2,8 +2,9 @@
 
 @Styles.Render("~/Content/news-page")
 
-<div class="row">
+<div class="header-image">
     <img class="col-md-12" src="~/Content/Images/product-header.png" />
+    <span>@Resources.Resources.News</span>
 </div>
 
 <div class="container" id="newsListContainer">    
