--- a/DioKftSite/Content/CustomDesign/Common.css
+++ b/DioKftSite/Content/CustomDesign/Common.css
@@ -1,4 +1,10 @@
-﻿img.admin {
+﻿
+.navbar-collapse {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+
+img.admin {
     width: 25%;
     height: auto;
     margin-left: 10%;
@@ -13,4 +19,95 @@ iframe.youtube-video-edit {
     width: 25%;
     height: auto;
     margin-left: 10%;
+}
+
+.navbar {
+    background: url("../Images/menuhattere.jpg");
+}
+
+.navbar-nav {
+    padding-top: 25px !important;
+    padding-left: 15px;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #125027;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+    .navbar-default .navbar-nav > li > a:hover {
+        color: #e6e6e6;
+    }
+
+    .navbar-default .navbar-nav > li > a:after {
+        content: '';
+        border-right: 1px solid #125027;
+        margin-top: 15px;
+        margin-left: 20px;
+    }
+
+.navbar-default .navbar-nav > li:last-child > a:after {
+    border: none;
+    margin: 0;
+}
+
+.navbar-brand {
+    padding: 0 !important;
+}
+
+.nav-item.selected a:after {
+    content: '';
+    color: #e6e6e6;
+    border-bottom: 1px solid #125027;
+}
+
+.nav-item.selected a {
+    text-decoration: underline;
+}
+
+.container.body-content {
+    position: relative;
+    top: 49px;
+}
+
+.btn-authentication {
+    background-color: #125027;
+    border-radius: 0px;
+    color: white;
+    padding: 4px 12px 4px 12px !important;
+}
+
+.navbar-right {
+    position: relative;
+    top: 5px;    
+}
+
+
+.header-image {
+    position: relative;
+    width: 100%;
+}
+
+img {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+div.header-image span {
+    text-align: center;
+    width: 30%;
+    height: 1.5em;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    font-size: 30pt;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
 }
