--- a/DioKftSite/Views/Home/_Slider.cshtml
+++ b/DioKftSite/Views/Home/_Slider.cshtml
@@ -3,6 +3,11 @@
         width: 100% !important;
         height: 700px !important;
     }
+
+    #myCarousel {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 </style>
 <div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
