--- a/DioKftSite/Views/Login/Index.cshtml
+++ b/DioKftSite/Views/Login/Index.cshtml
@@ -1,45 +1,47 @@
 ﻿@model DioKftSite.Models.UserCredentials
 
-@{
-    ViewBag.Title = "Index";
-}
+<div class="header-image">
+    <img class="col-md-12" src="~/Content/Images/product-header.png" />
+    <span>Bejelentkezés</span>
+</div>
 
-<h2>Login</h2>
 @if (ViewBag.IsUnauthorized != null && ViewBag.IsUnauthorized)
 {
     <div class="alert alert-danger">
-        <strong>Warning!</strong> Unauthorized.
+        <strong>Figyelem!</strong> Rossz felhasznélónév vagy jelszó!
     </div>
 }
 
-@using (Html.BeginForm("Login","Login"))
-{
-    @Html.AntiForgeryToken()
+<div class="container panel-body">
+    @using (Html.BeginForm("Login", "Login"))
+    {
+        @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.Label("Felhasználónév", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.Label("Jelszó", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Bejelentkezés" class="btn btn-success" />
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
+    }
+</div>
 
