--- a/DioKftSite/Views/Services/Index.cshtml
+++ b/DioKftSite/Views/Services/Index.cshtml
@@ -4,8 +4,9 @@
 
 @Styles.Render("~/Content/services")
 
-<div class="row">
+<div class="header-image">
     <img class="col-md-12" src="~/Content/Images/product-header.png" />
+    <span>@Resources.Resources.Services</span>
 </div>
 
 <div class="container" id="servicesContainer">
