--- a/DioKftSite/Views/ContactPage/_ContactItem.cshtml
+++ b/DioKftSite/Views/ContactPage/_ContactItem.cshtml
@@ -1,8 +1,11 @@
 ﻿@model DioKftSite.Models.Contact
+@{
+    var imageUrl = Url.Content(Model.ImageUrl ?? "~/content/images/default-avatar.png");
+}
 
 <div class="col-xs-12 col-sm-3">
     <div class="row">
-        <img style="margin-left:auto;margin-right:auto;display:block;" src="@Url.Content(Model.ImageUrl)" class="img-responsive img-circle" width="150" height="150">
+        <img style="margin-left:auto;margin-right:auto;display:block; width:150px; height:150px;" src="@imageUrl" class="img-responsive img-circle" width="150" height="150">
     </div>
     <div class="row">
         <div style="text-align:center">@Model.Name</div>
