--- a/DioKftSite/Views/Contacts/Edit.cshtml
+++ b/DioKftSite/Views/Contacts/Edit.cshtml
@@ -50,7 +50,7 @@
         </div>
 
         @Html.HiddenFor(model => model.ImageUrl)
-        <img src="@Url.Content(Model.ImageUrl)" class="img-responsive admin" />
+        <img src="@Url.Content(Model.ImageUrl ?? "~/content/images/default-avatar.png")" class="img-responsive admin" />
 
         <div class="form-group">
             @Html.Label("File", htmlAttributes: new { @class = "control-label col-md-2" })
