--- a/DioKftSite/Content/CustomDesign/Common.css
+++ b/DioKftSite/Content/CustomDesign/Common.css
@@ -126,7 +126,7 @@ div.header-image span {
         color: #125027;
         width: 100px;
         height: 100px;
-        margin: 50px auto;
+        margin: auto;
         position: absolute;
         top: 0;
         bottom: 0;
